objects/TimeSheet__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TimeSheets</relationshipName>
    <type>Lookup</type>
</CustomField>