objects/TimeSheet__c/fields/ProjectTask__c.field-meta.xml
<CustomField>
    <fullName>ProjectTask__c</fullName>
    <label>ProjectTask</label>
    <referenceTo>ProjectTask__c</referenceTo>
    <relationshipLabel>TimeSheets</relationshipLabel>
    <relationshipName>TimeSheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>