objects/TimeSheet__c/fields/Scheduled_Hourrs__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Hourrs__c</fullName>
    <label>Scheduled Hourrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>