objects/TimeSheet__c/fields/Task_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Task_Time_Hours__c</fullName>
    <label>Task Time Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>