objects/TimeSheet__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>TimeSheets</relationshipLabel>
    <relationshipName>TimeSheets</relationshipName>
    <type>Lookup</type>
</CustomField>