objects/TimeSheet__c/fields/Total_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Hours__c</fullName>
    <label>Deprecated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>