objects/TimeSheet__c/fields/Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours__c</fullName>
    <label>Work Hours</label>
    <summarizedField>TimeCard__c.Work_Hours__c</summarizedField>
    <summaryForeignKey>TimeCard__c.TimeSheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>